minikube/trendz/trendz-python-executor.yml
#
# Copyright © 2016-2020 The Thingsboard Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: trendz-python-executor
  namespace: thingsboard
  labels:
    app: trendz-python-executor
spec:
  serviceName: trendz-python-executor
  selector:
    matchLabels:
      app: trendz-python-executor
  replicas: 1
  template:
    metadata:
      name: trendz-app-pod
      labels:
        app: trendz-python-executor
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/path: '/actuator/prometheus'
        prometheus.io/port: '8181'
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: trendz-python-executor-container
          image: thingsboard/trendz-python-executor:1.15.0
          imagePullPolicy: Always
          resources:
            requests:
              cpu:    "50m"
              memory: "500Mi"
            limits:
              cpu:    "1000m"
              memory: "500Mi"
          ports:
            - name: http
              protocol: TCP
              containerPort: 8181
          livenessProbe:
            httpGet:
              path: /actuator
              port: 8181
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 5
          startupProbe:
            httpGet:
              path: /actuator
              port: 8181
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 1
            failureThreshold: 10
          volumeMounts:
            - name: trendz-python-executor-config
              mountPath: /python-executor-config-files
      volumes:
        - name: trendz-python-executor-config
          configMap:
            name: trendz-python-executor-config
            items:
              - key: requirements.txt
                path: requirements.txt
              - key: python-executor.conf
                path: python-executor.conf
              - key: logback.xml
                path: logback.xml
---
apiVersion: v1
kind: Service
metadata:
  name: trendz-python-executor
  namespace: thingsboard
spec:
  type: ClusterIP
  selector:
    app: trendz-python-executor
  ports:
    - name: http
      protocol: TCP
      port: 8181
      targetPort: http
---
