minikube/trendz/trendz-load-balancer.yml
#
# Copyright © 2016-2020 The Thingsboard Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tb-ingress
  namespace: thingsboard
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
spec:
  rules:
    - http:
        paths:
          # Close external access to prevent unauthorized use
          - path: /apiTrendz/system/signingKey/setup/anonymously
            pathType: Prefix
            backend:
              service:
                name: tb-web-ui
                port:
                  number: 8080
          - path: /analytics/actuator
            pathType: Prefix
            backend:
              service:
                name: tb-web-ui
                port:
                  number: 8080
          - path: /trendz/actuator
            pathType: Prefix
            backend:
              service:
                name: tb-web-ui
                port:
                  number: 8080
          # Allowed APIs for external access
          - path: /analytics/
            pathType: Prefix
            backend:
              service:
                name: trendz-app
                port:
                  number: 8888
          - path: /trendz/
            pathType: Prefix
            backend:
              service:
                name: trendz-app
                port:
                  number: 8888
          - path: /apiTrendz/
            pathType: Prefix
            backend:
              service:
                name: trendz-app
                port:
                  number: 8888
